syntax="proto3";

package scores;

service ScoresService {
    rpc GetAllScores(GetAllScoresRequest) returns (GetAllScoresResponse) {}
    rpc GetScoreById(GetScoreByIdRequest) returns (GetScoreByIdResponse) {}
    rpc GetLeaderboard(GetLeaderboardRequest) returns (GetLeaderboardResponse) {}
    rpc CreateScore(CreateScoreRequest) returns (CreateScoreResponse) {}
    rpc UpdateScore(UpdateScoreRequest) returns (UpdateScoreResponse) {}
    rpc RemoveScore(RemoveScoreRequest) returns (RemoveScoreResponse) {}
}


message Score {
    string id = 1;
    string userId = 2;
    string game = 3;
    int32 score = 4;
    string createdAt = 5;
    string updatedAt = 6;
    string deletedAt = 7;
}

message FilterScores {
    string game = 1;
    string userId = 2;
    bool showDeleted = 3;
    string orderBy = 4;
    string order = 5;
}

message Metadata {
    int32 page = 1;
    int32 limit = 2;
    int32 totalItems = 3;
    int32 totalPages = 4;
}

message GetAllScoresRequest {
    int32 limit = 1;
    int32 page = 2;
    FilterScores filter = 3;

}
message GetAllScoresResponse {
    repeated Score scores = 1;
    Metadata metadata = 2;
}

message GetLeaderboardRequest {
    int32 limit = 1;
    int32 page = 2;
    string game = 3;
}

message GetLeaderboardResponse {
    repeated Score scores = 1;
    Metadata metadata = 2;
}

message GetScoreByIdRequest {
    string id = 1;
}

message GetScoreByIdResponse {
    Score score = 1;
}

message CreateScoreRequest {
    string userId = 1;
    string game = 2;
    int32 score = 3;
}

message CreateScoreResponse {
    Score score = 1;
}

message UpdateScoreRequest {
    string scoreId = 2;
    string game = 3;
    int32 score = 4;
}


message UpdateScoreResponse {
    Score score = 1;
}

message RemoveScoreRequest {
    string id = 1;
}

message RemoveScoreResponse {}

message Empty {}

